results/SVCOMP/houdini/log-StringBuilderChars02-2024_03_19_04_28_08.txt
public class StringBuilderChars02 {
  //@ non_null
  //@ ensures \result;
  //@ ensures !\result;
  //@ ensures arg == null ==> \result;
  //@ ensures arg == null ==> !\result;
  //@ ensures arg != null ==> \result;
  //@ ensures arg != null ==> !\result;
  public static boolean f(String arg) {
    StringBuilder buffer = new StringBuilder(arg);
    return buffer.toString().equals("DiffBlue Limitted");
  }


  //@ requires \nonnullelements(args);
  public static void main(String[] args) {
    f("");
    f("#$%^&*123");
    f("fsgdhj");
    f("DiffBlue L1mitted");
    f("DiffBlue Limitted");
  }
}


/home/max/Documents/JMLGPT/tmp/StringBuilderChars02.java:2: error: No modifiers are allowed prior to a lightweight specification case
  //@ non_null
      ^
1 error

public class StringBuilderChars02 {
  //@ ensures \result;
  //@ ensures !\result;
  //@ ensures arg == null ==> \result;
  //@ ensures arg == null ==> !\result;
  //@ ensures arg != null ==> \result;
  //@ ensures arg != null ==> !\result;
  public static boolean f(String arg) {
    StringBuilder buffer = new StringBuilder(arg);
    return buffer.toString().equals("DiffBlue Limitted");
  }


  //@ requires \nonnullelements(args);
  public static void main(String[] args) {
    f("");
    f("#$%^&*123");
    f("fsgdhj");
    f("DiffBlue L1mitted");
    f("DiffBlue Limitted");
  }
}


OpenJML not responding. Aborted.
